tests/paczka1/fuzzy1/59936617.err
Error in line 1: QGUVuYgFW4 S107 53,3
Error in line 3: z6lzwynQTjS S107 24,4
Error in line 8: QGUVuYgFW4 A765 88,9
Error in line 11: 9UriypdbD A351 30,5
Error in line 9: QGUVuYgFW4 A964 98,2
Error in line 12: 9UriypdbD A964 57,0
Error in line 28: nNJh1T5dE A964 8,9
Error in line 38: nNJh1T5dE A765 77,3
